сетки и декоративные элементы (2 в 1)
Пока не успел доделать страницу с каталогом.

--- a/catalog.html
+++ b/catalog.html
@@ -11,8 +11,9 @@
 <body>
 <header>
   <nav class="upper-menu">
-    <div class="upper-logo"><a href="index.html" class="main-link"><img src="img/technomart.svg" class="upper-technomart"></a></div>
-    <form action="#" method="get">
+    <a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart">
+		</a> 
+    <form action="#" method="get" class="search">
       <button name="search"></button>
       <input type="text" name="search" placeholder="Поиск:">
     </form>
@@ -157,11 +158,8 @@
 </main>
 <footer>
   <section class="down-menu">
-    <div class="down-logo"> 
-		<a href="index.html" class="main-link">
-			<img src="img/technomart.svg" class="down-technomart">
+    <a href="index.html" class="down-logo"><img src="img/technomart.svg" class="down-technomart">
 		</a> 
-	</div>
     <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8<br>
       +7 (812) 555-05-55</p>
     <ul class="menu-pages">
