--- a/index.html
+++ b/index.html
@@ -9,30 +9,32 @@
 </head>
 
 <body>
-<header>
+<header class="header-width">
   <nav class="upper-menu">
-    <div class="upper-logo"> 
-		<a href="index.html" class="main-link"><img src="img/technomart.svg" class="upper-technomart">
+		<a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart">
 		</a> 
-	</div>
-    <form action="#" method="get">
-      <button name="search"></button>
-      <input type="text" name="search" placeholder="Поиск:">
+    <form action="#" method="get"  class="search">
+      <a href="#" name="search" class="glass"><img src="img/icon-search.png"></a>
+      <input type="text" class="find-text" name="search" placeholder="Поиск:">
     </form>
-    <a href="#" class="main-action">Закладки: 0</a> 
-	<a href="#" class="main-action">Корзина: 0</a> 
-	<a href="#" class="main-action">Оформить заказ</a> 
+    <a href="#" class="main-action book"><img src="img/icon-bookmark.png" class="zakladka">Закладки: 0</a> 
+	<a href="#" class="main-action korz"><img src="img/cart-icon.png" class="korzina">Корзина: 0</a> 
+	<a href="#" class="main-action order">Оформить заказ</a> 
   </nav>
   <section class="main-info">
     <h2 class="main-describe">Интернет-магазин<br>
       строительных материалов <br>
       и инструментов для ремонта
 	</h2>
-    <a href="tel:+78125550555" class="tel">+7 (812) 555-05-55
+	  <div class="right-fl">
+		  <div class="call-adress">
+    <a href="tel:+78125550555" class="tel"><img src="img/icon-phone.png" class="telefon">+7 (812) 555-05-55
 	</a>
     <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
-    <button name="enter" class="enter">Войти</button>
+			  </div>
+    <button name="enter" class="enter"><img src="img/icon-login.png" class="voiti">Войти</button>
     <a href="#" class="reg">Регистрация</a>
+		  </div>
     <nav class="main-menu">
       <ul>
         <li><a href="index.html">Главная</a></li>
@@ -44,36 +46,40 @@
         <li><a href="#">Контакты</a></li>
       </ul>
     </nav>
-  </section>
+	  </section>
 </header>
-<main>
+<main class="main-width">
   <section class="add-info">
+	  <div class="tehn-flex">
     <h3>Компания "Техномарт"</h3>
-    <p class="add-info add-info-text">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-    <p class="add-info add-info-text">Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
+    <p class="add-info add-info-text">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br> строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+    <p class="add-info add-info-text">Мы можем доставить ваш товар в самые отдалённые точки России!<br> Техномарт работает со многими транспортными компаниями:</p>
     <ul class="delivery">
       <li class="delivery name">Деловые линии</li>
       <li class="delivery name">Автотрейдинг</li>
       <li class="delivery name">ЖелДорЭкспедиция</li>
     </ul>
     <a href="#" class="about-us">Подробнее о компании</a>
+		  </div>
+	  <div class="cont-flex">
     <h3>Контакты</h3>
-    <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+    <p class="add-info-text">Вы можете забрать товар сами,<br> заехав в наш офис:</p>
     <a href="#"><img src="img/map.png"></a>
     <div class="visually-hidden"><img src="#" name="big_map">
       <button name="exit"><img src="#"></button>
     </div>
     <a href="#" class="write-to-us">Заблудились? Напишите нам!</a> 
+		  </div>
   </section>
 </main>
-<footer>
+<footer class="footer-width">
   <section class="down-menu">
-    <div class="down-logo">
-		<a href="index.html" class="main-link"><img src="img/technomart.svg" class="down-technomart">
+	  <div class="down-flex">
+		<a href="index.html" class="down-logo"><img src="img/technomart.svg" class="down-technomart">
 		</a> 
-	</div>
     <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8<br>
       +7 (812) 555-05-55</p>
+		  </div>
     <ul class="menu-pages">
       <li><a href="#">Компания</a></li>
       <li><a href="#">Новости</a></li>
@@ -91,10 +97,13 @@
   <section class="links">
     <p>2010-2017 Компания "Техномарт"<br>
       Все права защищены</p>
-    <a href="www.vk.com"><img src="vk.jpg"></a>
-	<a href="www.facebook.com"><img src="fb.jpg"></a>
-	<a href="www.instagram.com"><img src="ins.jpg"></a>
-    <table>
+	  <div class="ic-flx">
+    <a href="www.vk.com"><img src="img/vk-icon-min.png" class="sn-pic"></a>
+	<a href="www.facebook.com"><img src="img/fb-icon-min.png" class="sn-pic"></a>
+	<a href="www.instagram.com"><img src="img/insta-icon-min.png" class="sn-pic"></a>
+		  </div>
+    <div class="flx-table">
+	  <table>
       <tr class="tab-article">
         <td>Обратная связь:</td>
         <td>Разработано -</td>
@@ -104,6 +113,7 @@
         <td><a href="www.htmlacademy.ru">htmlacademy.ru</a></td>
       </tr>
     </table>
+		</div>
   </section>
 </footer>
 <div class="visually-hidden">
