--- a/catalog.html
+++ b/catalog.html
@@ -9,200 +9,205 @@
 </head>
 
 <body>
-<header>
-  <nav class="upper-menu">
-    <a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart">
-		</a> 
-    <form action="#" method="get" class="search">
-      <button name="search"></button>
-      <input type="text" name="search" placeholder="Поиск:">
-    </form>
-    <a href="#" class="main-action">Закладки: 10</a> 
-	<a href="#" class="main-action">Корзина: 0</a> 
-	<a href="#" class="main-action">Оформить заказ</a> 
-  </nav>
-  <section class="main-info">
-    <h2 class="main-describe">Интернет-магазин<br>
-      строительных материалов<br>
-      и инструментов для ремонта
-	</h2>
-    <a href="tel:+78125550555" class="tel">+7 (812) 555-05-55
-	</a>
-    <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
-    <div class="user-info">
-		<a href="#" class="enter">Равшан Джамшутович</a>
-		<a href="#" name="exit"></a>
-      <ul class="orders-cab">
-        <li><a href="#">Мои заказы</a></li>
-        <li><a href="#">Личный кабинет</a></li>
-      </ul>
-    </div>
-    <nav class="main-menu">
-      <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="#">Компания</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="#">Спецпредложения</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-    </nav>
-  </section>
-</header>
-<main>
-  <ul class="navigation">
-    <li><a href="index.html"></a></li>
-    <li><a href="catalog.html">Каталог</a></li>
-    <li><a href="#">Инструмент</a></li>
-    <li><a href="#">Перформаторы</a></li>
-  </ul>
-  <section class="sub-menu">
-    <h3>Перфораторы</h3>
-    <h4>Производители:</h4>
-    <form action="#" method="get">
-      <ul>
-        <li>
-          <label>
-            <input type="checkbox" name="Bosh">
-            Bosh
-		  </label>
-        </li>
-        <li>
-          <label>
-            <input type="checkbox" name="Interskol">
-            Интерскол
-		  </label>
-        </li>
-        <li>
-          <label>
-            <input type="checkbox" name="Makita">
-            Makita
-		  </label>
-        </li>
-        <li>
-          <label>
-            <input type="checkbox" name="Dewalt">
-            Dewalt
-		  </label>
-        </li>
-        <li>
-          <label>
-            <input type="checkbox" name="Hitachi">
-            Hitachi
-		  </label>
-        </li>
-      </ul>
-      <h4>Питание:</h4>
-      <ul>
-        <li>
-          <label>
-            <input type="radio" name="supply" value="battery">
-            Аккумуляторные
-		  </label>
-        </li>
-        <li>
-          <label>
-            <input type="radio" name="supply" value="network">
-            Сетевые
-		  </label>
-        </li>
-      </ul>
-      <button>Показать</button>
-    </form>
-    <ul>
-      <li><img src="img/Perforator_1.jpg">
-        <p class="product-name">Перфоратор Bosh BFG 3000</p>
-        <p class="old-value">22500 Р.</p>
-        <p class="new-value">15500 Р.</p>
-      </li>
-      <li><img src="img/Perforator_2.jpg">
-        <p class="product-name">Перфоратор Bosh BFG 6000</p>
-        <p class="old-value">30500 Р.</p>
-        <p class="new-value">25500 Р.</p>
-      </li>
-      <li><a href="#" class="buy">Купить</a> <a href="#" class="bookmarks">В закладки</a>
-        <p class="product-name">Перфоратор Bosh BFG 2000</p>
-        <p class="main-value">12500 Р.</p>
-      </li>
-      <li><img src="img/Perforator_1.jpg">
-        <p class="product-name">Перфоратор Bosh BFG 3000</p>
-        <p class="old-value">22500 Р.</p>
-        <p class="new-value">15500 Р.</p>
-      </li>
-      <li><img src="img/Perforator_2.jpg">
-        <p class="product-name">Перфоратор Bosh BFG 6000</p>
-        <p class="old-value">30500 Р.</p>
-        <p class="new-value">25500 Р.</p>
-      </li>
-      <li><img src="img/Perforator_3.jpg">
-        <p class="product-name">Перфоратор Bosh BFG 2000</p>
-        <p class="main-value">12500 Р.</p>
-      </li>
-      <li><img src="img/Perforator_1.jpg">
-        <p class="product-name">Перфоратор Bosh BFG 3000</p>
-        <p class="old-value">22500 Р.</p>
-        <p class="new-value">15500 Р.</p>
-      </li>
-      <li><img src="img/Perforator_2.jpg">
-        <p class="product-name">Перфоратор Bosh BFG 6000</p>
-        <p class="old-value">30500 Р.</p>
-        <p class="new-value">25500 Р.</p>
-      </li>
-      <li><img src="img/Perforator_3.jpg">
-        <p class="product-name">Перфоратор Bosh BFG 2000</p>
-        <p class="main-value">12500 Р.</p>
-      </li>
-    </ul>
-  </section>
-</main>
-<footer>
-  <section class="down-menu">
-    <a href="index.html" class="down-logo"><img src="img/technomart.svg" class="down-technomart">
-		</a> 
-    <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8<br>
-      +7 (812) 555-05-55</p>
-    <ul class="menu-pages">
-      <li><a href="#">Компания</a></li>
-      <li><a href="#">Новости</a></li>
-      <li><a href="catalog.html">Каталог</a></li>
-      <li><a href="#">Доставка</a></li>
-      <li><a href="#">Контакты</a></li>
-    </ul>
-    <ul class="menu-pages-mat">
-      <li><a href="#">Материалы</a></li>
-      <li><a href="#">Техника</a></li>
-      <li><a href="#">Инструмент</a></li>
-      <li><a href="#">Спецпредложения</a></li>
-    </ul>
-  </section>
-  <section class="links">
-    <p>2010-2017 Компания "Техномарт"<br>
-      Все права защищены</p>
-    <a href="www.vk.com"><img src="vk.jpg"></a> 
-	  <a href="www.facebook.com"><img src="fb.jpg"></a> 
-	  <a href="www.instagram.com"><img src="ins.jpg"></a>
-    <table>
-      <tr class="tab-article">
-        <td>Обратная связь:</td>
-        <td>Разработано -</td>
-      </tr>
-      <tr class="tab-links">
-        <td>
-			<a href="mail@htmlacademy.ru">mail@htmlacademy.ru
-			</a>
-		</td>
-        <td><a href="www.htmlacademy.ru">htmlacademy.ru</a>
-		</td>
-      </tr>
-    </table>
-  </section>
-</footer>
-<div class="visually-hidden">
-  <p>Товар добавлен в корзину!</p>
-  <a href="#">Оформить заказ</a> 
-  <a href="#">Продолжить покупки</a>
-  <button name="exit" style="#"></button>
+<div class="main-width">
+  <header>
+    <nav class="upper-menu"> <a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart"> </a>
+      <form action="#" method="get"  class="search">
+        <a href="#" name="search" class="glass"><img src="img/icon-search.png" class="glass"></a>
+        <input type="text" class="find-text" name="search" placeholder="Поиск:">
+      </form>
+      <a href="#" class="main-action book"><img src="img/icon-bookmark.png" class="zakladka">Закладки: 0</a> <a href="#" class="main-action korz-cat"><img src="img/cart-icon.png" class="korzina">Корзина: 10</a> <a href="#" class="main-action order">Оформить заказ</a> </nav>
+    <section class="main-info">
+      <div class="right-fl">
+        <h2 class="main-describe">Интернет-магазин<br>
+          строительных материалов<br>
+          и инструментов для ремонта </h2>
+        <div class="call-adress-cat"> <a href="tel:+78125550555" class="tel"><img src="img/icon-phone.png" class="telefon">+7 (812) 555-05-55 </a>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
+        </div>
+        <div class="user-info">
+          <div class="prof-but"> <a href="#" class="profile"><img src="img/icon-user.png" class="prof-ic">Равшан Джамшутович</a>
+            <div class="prof-logout"> <a href="#" name="exit"><img src="img/icon-logout копия.png"></a> </div>
+          </div>
+          <div class="orders-cab"> <a href="#">Мои заказы</a>
+            <div class="dot"></div>
+            <a href="#">Личный кабинет</a> </div>
+        </div>
+      </div>
+      <nav class="main-menu"> <a href="index.html">Главная</a> <a href="#">Компания</a> <a href="catalog.html">Каталог</a> <a href="#">Новости</a> <a href="#">Спецпредложения</a> <a href="#">Доставка</a> <a href="#">Контакты</a> </nav>
+    </section>
+  </header>
+  <main>
+    <div class="navigation"> <a href="index.html"><img src="img/icon-home.svg"></a> <img src="img/icon-right-small.svg"> <a href="catalog.html">Каталог</a> <img src="img/icon-right-small.svg"> <a href="#">Инструмент</a> <img src="img/icon-right-small.svg"> <a href="#">Перфораторы</a> </div>
+    <section class="sub-menu">
+      <div class="perf">
+        <h3>Перфораторы</h3>
+      </div>
+      <div class="goods-flex-cat">
+        <div class="make-a-choise">
+          <form action="#" method="get" class="form-pad">
+			  <h4>Производители:</h4>
+            <ul>
+              <li>
+                <label>
+                  <input type="checkbox" name="Bosh" class="checkbox-cast">
+                  Bosh</label>
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="Interskol" class="checkbox-cast">
+                  Интерскол </label>
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="Makita" class="checkbox-cast">
+                  Makita </label>
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="Dewalt" class="checkbox-cast">
+                  Dewalt </label>
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="Hitachi" class="checkbox-cast">
+                  Hitachi </label>
+              </li>
+            </ul>
+            <h4>Питание:</h4>
+            <ul>
+              <li>
+                <label>
+                  <input type="radio" name="supply" value="battery" class="radio-cast">
+                  Аккумуляторные </label>
+              </li>
+              <li>
+                <label>
+                  <input type="radio" name="supply" value="network" class="radio-cast">
+                  Сетевые </label>
+              </li>
+            </ul>
+            <button class="show">Показать</button>
+          </form>
+        </div>
+        <div class="list-of-goods">
+          <ul class="items">
+            <li class="item-flex"><img src="img/Perforator_1.jpg">
+              <div class="descrip-item">
+                <p class="product-name">Перфоратор Bosh BFG 3000</p>
+                <p class="old-value">22500 Р.</p>
+                <p class="new-value">15500 Р.</p>
+              </div>
+            </li>
+            <li class="item-flex"><img src="img/Perforator_2.jpg">
+				<div class="descrip-item">
+              <p class="product-name">Перфоратор Bosh BFG 6000</p>
+              <p class="old-value">30500 Р.</p>
+              <p class="new-value">25500 Р.</p>
+					</div>
+            </li>
+            <li class="item-flex">
+				<img src="img/new flag.png" class="flag">
+				<div class="descrip-item">
+				<a href="#" class="buy"><img src="img/cart-icon.png" class="cart-cat">Купить</a>
+				<a href="#" class="bookmarks">В закладки</a>
+              <p class="product-name">Перфоратор Bosh BFG 2000</p>
+              <p class="new-value-rows">12500 Р.</p>
+					</div>
+            </li>
+            <li class="item-flex"><img src="img/Perforator_1.jpg">
+				<div class="descrip-item">
+              <p class="product-name">Перфоратор Bosh BFG 3000</p>
+              <p class="old-value">22500 Р.</p>
+              <p class="new-value">15500 Р.</p>
+					</div>
+            </li>
+            <li class="item-flex">
+				<img src="img/new flag.png" class="flag">
+				<img src="img/Perforator_2.jpg">
+				<div class="descrip-item">
+              <p class="product-name">Перфоратор Bosh BFG 6000</p>
+              <p class="old-value">30500 Р.</p>
+              <p class="new-value">25500 Р.</p>
+					</div>
+            </li>
+            <li class="item-flex"><img src="img/Perforator_3.jpg">
+				<div class="descrip-item">
+              <p class="product-name">Перфоратор Bosh BFG 2000</p>
+              <p class="new-value-rows">12500 Р.</p>
+					</div>
+            </li>
+            <li class="item-flex">
+				<img src="img/new flag.png" class="flag">
+				<img src="img/Perforator_1.jpg">
+				<div class="descrip-item">
+              <p class="product-name">Перфоратор Bosh BFG 3000</p>
+              <p class="old-value">22500 Р.</p>
+              <p class="new-value">15500 Р.</p>
+					</div>
+            </li>
+            <li class="item-flex"><img src="img/Perforator_2.jpg">
+				<div class="descrip-item">
+              <p class="product-name">Перфоратор Bosh BFG 6000</p>
+              <p class="old-value">30500 Р.</p>
+              <p class="new-value">25500 Р.</p>
+					</div>
+            </li>
+            <li class="item-flex"><img src="img/Perforator_3.jpg">
+				<div class="descrip-item">
+              <p class="product-name">Перфоратор Bosh BFG 2000</p>
+              <p class="new-value-rows">12500 Р.</p>
+					</div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <section class="down-menu">
+      <div class="tech-upper"> <a href="index.html" class="down-logo"><img src="img/technomart.svg" class="down-technomart"> </a>
+        <div class="menu-pages"> <a href="#">Компания</a> <a href="#">Новости</a> <a href="catalog.html">Каталог</a> <a href="#">Доставка</a> <a href="#">Контакты</a> </div>
+      </div>
+      <div class="tech-down">
+        <div class="down-adress">
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8<br>
+            +7 (812) 555-05-55</p>
+        </div>
+        <div class="menu-pages-mat"> <a href="#">Материалы</a> <a href="#">Техника</a> <a href="#">Инструмент</a> <a href="#">Спецпредложения</a> </div>
+      </div>
+    </section>
+    <section class="links">
+      <div class="down-info">
+        <div class="sign">
+          <p>2010-2017 Компания "Техномарт"<br>
+            Все права защищены</p>
+        </div>
+        <div class="ic-flx">
+          <div class="ic-background"> <a href="www.vk.com"><img src="img/vk-icon-min.png" class="sn-pic"></a> </div>
+          <div class="ic-background"> <a href="www.facebook.com"><img src="img/fb-icon-min.png" class="sn-pic"></a> </div>
+          <div class="ic-background"> <a href="www.instagram.com"><img src="img/insta-icon-min.png" class="sn-pic"></a> </div>
+        </div>
+        <div class="flx-table">
+          <table>
+            <tr class="tab-article">
+              <td>Обратная связь:</td>
+              <td>Разработано -</td>
+            </tr>
+            <tr class="tab-links">
+              <td><a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></td>
+              <td><a href="www.htmlacademy.ru">htmlacademy.ru</a></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </section>
+  </footer>
+  <div class="visually-hidden">
+    <p>Товар добавлен в корзину!</p>
+    <a href="#">Оформить заказ</a> <a href="#">Продолжить покупки</a>
+    <button name="exit" style="#"></button>
+  </div>
 </div>
 </body>
 </html>
