--- a/index.html
+++ b/index.html
@@ -9,127 +9,111 @@
 </head>
 
 <body>
-<header class="header-width">
-  <nav class="upper-menu">
-		<a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart">
-		</a> 
-    <form action="#" method="get"  class="search">
-      <a href="#" name="search" class="glass"><img src="img/icon-search.png"></a>
-      <input type="text" class="find-text" name="search" placeholder="Поиск:">
+<div class="main-width">
+  <header>
+    <nav class="upper-menu"> <a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart"> </a>
+      <form action="#" method="get"  class="search">
+        <a href="#" name="search" class="glass"><img src="img/icon-search.png" class="glass"></a>
+        <input type="text" class="find-text" name="search" placeholder="Поиск:">
+      </form>
+      <a href="#" class="main-action book"><img src="img/icon-bookmark.png" class="zakladka">Закладки: 0</a> <a href="#" class="main-action korz"><img src="img/cart-icon.png" class="korzina">Корзина: 0</a> <a href="#" class="main-action order">Оформить заказ</a> </nav>
+    <section class="main-info">
+      <div class="right-fl">
+        <h2 class="main-describe">Интернет-магазин строительных материалов <br>
+          и инструментов для ремонта </h2>
+        <div class="call-adress"> <a href="tel:+78125550555" class="tel"><img src="img/icon-phone.png" class="telefon">+7 (812) 555-05-55 </a>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
+        </div>
+        <button name="enter" class="enter"><img src="img/icon-login.png" class="voiti">Войти</button>
+        <a href="#" class="reg">Регистрация</a> </div>
+      <nav class="main-menu"> <a href="index.html">Главная</a> <a href="#">Компания</a> <a href="catalog.html">Каталог</a> <a href="#">Новости</a> <a href="#">Спецпредложения</a> <a href="#">Доставка</a> <a href="#">Контакты</a> </nav>
+    </section>
+  </header>
+  <main>
+    <section class="add-info">
+      <div class="tehn-flex">
+        <h3>Компания "Техномарт"</h3>
+        <p class="add-info-text">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
+          строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+        <p class="add-info-text-deliv">Мы можем доставить ваш товар в самые отдалённые точки России!
+          Техномарт работает со многими транспортными компаниями:</p>
+        <ul class="delivery">
+		  <div class="dash-flex">
+          <div class="dash"></div><li class="delivery name">Деловые линии</li>
+				</div>
+		  <div class="dash-flex">
+          <div class="dash"></div><li class="delivery name">Автотрейдинг</li>
+				</div>
+		  <div class="dash-flex">
+          <div class="dash"></div><li class="delivery name">ЖелДорЭкспедиция</li>
+				</div>
+        </ul>
+        <a href="#" class="about-us">Подробнее о компании</a> </div>
+      <div class="cont-flex">
+        <h3>Контакты</h3>
+        <p class="add-info-text-map">Вы можете забрать товар сами,
+          заехав в наш офис:</p>
+        <a href="#"><img src="img/map.png"></a>
+        <div class="visually-hidden"><img src="#" name="big_map">
+          <button name="exit"><img src="#"></button>
+        </div>
+        <a href="#" class="write-to-us">Заблудились? Напишите нам!</a> </div>
+    </section>
+  </main>
+  <footer>
+    <section class="down-menu">
+      <div class="tech-upper"> <a href="index.html" class="down-logo"><img src="img/technomart.svg" class="down-technomart"> </a>
+        <div class="menu-pages"> <a href="#">Компания</a> <a href="#">Новости</a> <a href="catalog.html">Каталог</a> <a href="#">Доставка</a> <a href="#">Контакты</a> </div>
+      </div>
+      <div class="tech-down">
+        <div class="down-adress">
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8<br>
+            +7 (812) 555-05-55</p>
+        </div>
+        <div class="menu-pages-mat"> <a href="#">Материалы</a> <a href="#">Техника</a> <a href="#">Инструмент</a> <a href="#">Спецпредложения</a> </div>
+      </div>
+    </section>
+    <section class="links">
+      <div class="down-info">
+        <div class="sign">
+          <p>2010-2017 Компания "Техномарт"<br>
+            Все права защищены</p>
+        </div>
+        <div class="ic-flx">
+          <div class="ic-background"> <a href="www.vk.com"><img src="img/vk-icon-min.png" class="sn-pic"></a> </div>
+          <div class="ic-background"> <a href="www.facebook.com"><img src="img/fb-icon-min.png" class="sn-pic"></a> </div>
+          <div class="ic-background"> <a href="www.instagram.com"><img src="img/insta-icon-min.png" class="sn-pic"></a> </div>
+        </div>
+        <div class="flx-table">
+          <table>
+            <tr class="tab-article">
+              <td>Обратная связь:</td>
+              <td>Разработано -</td>
+            </tr>
+            <tr class="tab-links">
+              <td><a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></td>
+              <td><a href="www.htmlacademy.ru">htmlacademy.ru</a></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </section>
+  </footer>
+  <div class="visually-hidden">
+    <form action="#" method="post">
+      <label>Ваше имя:
+        <input type="text" name="your_name" placeholder="Имя Фамилия">
+      </label>
+      <label>Ваш E-mail:
+        <input type="text" name="your_name" placeholder="email@example.com">
+      </label>
+      <label>Текст письма:
+        <input type="text" name="your_name" placeholder="В свободной форме">
+      </label>
+      <input type="submit" name="send" value="Отправить">
+      <button name="exit" style="#"></button>
     </form>
-    <a href="#" class="main-action book"><img src="img/icon-bookmark.png" class="zakladka">Закладки: 0</a> 
-	<a href="#" class="main-action korz"><img src="img/cart-icon.png" class="korzina">Корзина: 0</a> 
-	<a href="#" class="main-action order">Оформить заказ</a> 
-  </nav>
-  <section class="main-info">
-    <h2 class="main-describe">Интернет-магазин<br>
-      строительных материалов <br>
-      и инструментов для ремонта
-	</h2>
-	  <div class="right-fl">
-		  <div class="call-adress">
-    <a href="tel:+78125550555" class="tel"><img src="img/icon-phone.png" class="telefon">+7 (812) 555-05-55
-	</a>
-    <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
-			  </div>
-    <button name="enter" class="enter"><img src="img/icon-login.png" class="voiti">Войти</button>
-    <a href="#" class="reg">Регистрация</a>
-		  </div>
-    <nav class="main-menu">
-      <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="#">Компания</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="#">Спецпредложения</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-    </nav>
-	  </section>
-</header>
-<main class="main-width">
-  <section class="add-info">
-	  <div class="tehn-flex">
-    <h3>Компания "Техномарт"</h3>
-    <p class="add-info add-info-text">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br> строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-    <p class="add-info add-info-text">Мы можем доставить ваш товар в самые отдалённые точки России!<br> Техномарт работает со многими транспортными компаниями:</p>
-    <ul class="delivery">
-      <li class="delivery name">Деловые линии</li>
-      <li class="delivery name">Автотрейдинг</li>
-      <li class="delivery name">ЖелДорЭкспедиция</li>
-    </ul>
-    <a href="#" class="about-us">Подробнее о компании</a>
-		  </div>
-	  <div class="cont-flex">
-    <h3>Контакты</h3>
-    <p class="add-info-text">Вы можете забрать товар сами,<br> заехав в наш офис:</p>
-    <a href="#"><img src="img/map.png"></a>
-    <div class="visually-hidden"><img src="#" name="big_map">
-      <button name="exit"><img src="#"></button>
-    </div>
-    <a href="#" class="write-to-us">Заблудились? Напишите нам!</a> 
-		  </div>
-  </section>
-</main>
-<footer class="footer-width">
-  <section class="down-menu">
-	  <div class="down-flex">
-		<a href="index.html" class="down-logo"><img src="img/technomart.svg" class="down-technomart">
-		</a> 
-    <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8<br>
-      +7 (812) 555-05-55</p>
-		  </div>
-    <ul class="menu-pages">
-      <li><a href="#">Компания</a></li>
-      <li><a href="#">Новости</a></li>
-      <li><a href="catalog.html">Каталог</a></li>
-      <li><a href="#">Доставка</a></li>
-      <li><a href="#">Контакты</a></li>
-    </ul>
-    <ul class="menu-pages-mat">
-      <li><a href="#">Материалы</a></li>
-      <li><a href="#">Техника</a></li>
-      <li><a href="#">Инструмент</a></li>
-      <li><a href="#">Спецпредложения</a></li>
-    </ul>
-  </section>
-  <section class="links">
-    <p>2010-2017 Компания "Техномарт"<br>
-      Все права защищены</p>
-	  <div class="ic-flx">
-    <a href="www.vk.com"><img src="img/vk-icon-min.png" class="sn-pic"></a>
-	<a href="www.facebook.com"><img src="img/fb-icon-min.png" class="sn-pic"></a>
-	<a href="www.instagram.com"><img src="img/insta-icon-min.png" class="sn-pic"></a>
-		  </div>
-    <div class="flx-table">
-	  <table>
-      <tr class="tab-article">
-        <td>Обратная связь:</td>
-        <td>Разработано -</td>
-      </tr>
-      <tr class="tab-links">
-        <td><a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></td>
-        <td><a href="www.htmlacademy.ru">htmlacademy.ru</a></td>
-      </tr>
-    </table>
-		</div>
-  </section>
-</footer>
-<div class="visually-hidden">
-  <form action="#" method="post">
-    <label>Ваше имя:
-      <input type="text" name="your_name" placeholder="Имя Фамилия">
-    </label>
-    <label>Ваш E-mail:
-      <input type="text" name="your_name" placeholder="email@example.com">
-    </label>
-    <label>Текст письма:
-      <input type="text" name="your_name" placeholder="В свободной форме">
-    </label>
-    <input type="submit" name="send" value="Отправить">
-    <button name="exit" style="#"></button>
-  </form>
+  </div>
 </div>
 </body>
 </html>
