--- a/catalog.html
+++ b/catalog.html
@@ -9,16 +9,15 @@
 </head>
 
 <body>
-<div class="main-width">
   <header>
     <nav class="upper-menu"> <a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart"> </a>
       <form action="#" method="get"  class="search">
         <a href="#" name="search" class="glass"><img src="img/icon-search.png" class="glass"></a>
         <input type="text" class="find-text" name="search" placeholder="Поиск:">
       </form>
-      <a href="#" class="main-action book"><img src="img/icon-bookmark.png" class="zakladka">Закладки: 0</a> <a href="#" class="main-action korz-cat"><img src="img/cart-icon.png" class="korzina">Корзина: 10</a> <a href="#" class="main-action order">Оформить заказ</a> </nav>
+      <a href="#" class="main-action book"><img src="img/icon-bookmark.png" class="bookmark-pic">Закладки: 0</a> <a href="#" class="main-action cart-catalog"><img src="img/cart-icon.png" class="cart-pic">Корзина: 10</a> <a href="#" class="main-action order">Оформить заказ</a> </nav>
     <section class="main-info">
-      <div class="right-fl">
+      <div class="second-menu">
         <h2 class="main-describe">Интернет-магазин<br>
           строительных материалов<br>
           и инструментов для ремонта </h2>
@@ -26,7 +25,7 @@
           <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
         </div>
         <div class="user-info">
-          <div class="prof-but"> <a href="#" class="profile"><img src="img/icon-user.png" class="prof-ic">Равшан Джамшутович</a>
+          <div class="prof-but"> <a href="#" class="profile"><img src="img/icon-user.png" class="profile-icon">Равшан Джамшутович</a>
             <div class="prof-logout"> <a href="#" name="exit"><img src="img/icon-logout копия.png"></a> </div>
           </div>
           <div class="orders-cab"> <a href="#">Мои заказы</a>
@@ -37,6 +36,7 @@
       <nav class="main-menu"> <a href="index.html">Главная</a> <a href="#">Компания</a> <a href="catalog.html">Каталог</a> <a href="#">Новости</a> <a href="#">Спецпредложения</a> <a href="#">Доставка</a> <a href="#">Контакты</a> </nav>
     </section>
   </header>
+	<div class="main-width">
   <main>
     <div class="navigation"> <a href="index.html"><img src="img/icon-home.svg"></a> <img src="img/icon-right-small.svg"> <a href="catalog.html">Каталог</a> <img src="img/icon-right-small.svg"> <a href="#">Инструмент</a> <img src="img/icon-right-small.svg"> <a href="#">Перфораторы</a> </div>
     <section class="sub-menu">
@@ -164,6 +164,7 @@
       </div>
     </section>
   </main>
+	</div>	
   <footer>
     <section class="down-menu">
       <div class="tech-upper"> <a href="index.html" class="down-logo"><img src="img/technomart.svg" class="down-technomart"> </a>
@@ -183,12 +184,12 @@
           <p>2010-2017 Компания "Техномарт"<br>
             Все права защищены</p>
         </div>
-        <div class="ic-flx">
+        <div class="social-networks">
           <div class="ic-background"> <a href="www.vk.com"><img src="img/vk-icon-min.png" class="sn-pic"></a> </div>
           <div class="ic-background"> <a href="www.facebook.com"><img src="img/fb-icon-min.png" class="sn-pic"></a> </div>
           <div class="ic-background"> <a href="www.instagram.com"><img src="img/insta-icon-min.png" class="sn-pic"></a> </div>
         </div>
-        <div class="flx-table">
+        <div class="cont-table">
           <table>
             <tr class="tab-article">
               <td>Обратная связь:</td>
@@ -208,6 +209,5 @@
     <a href="#">Оформить заказ</a> <a href="#">Продолжить покупки</a>
     <button name="exit" style="#"></button>
   </div>
-</div>
 </body>
 </html>
