--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="upper-menu"> 
 		<a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart"> </a>
       <form action="#" method="get"  class="search">
-        <a href="#" name="search" class="glass"><img src="img/icon-search.png" class="glass"></a>
+        <a href="#" name="search" class="glass"><img src="img/icon-search.png" class="glass-pic"></a>
         <input type="text" class="find-text" name="search" placeholder="Поиск:">
       </form>
       <a href="#" class="main-action book"><img src="img/icon-bookmark.png" class="bookmark-pic">Закладки: 0</a> <a href="#" class="main-action cart"><img src="img/cart-icon.png" class="cart-pic">Корзина: 0</a> <a href="#" class="main-action order">Оформить заказ</a> 
