--- a/catalog.html
+++ b/catalog.html
@@ -10,23 +10,31 @@
 
 <body>
   <header>
-    <nav class="upper-menu"> <a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart"> </a>
+    <nav class="color-nav"> 
+		<div class="main-width">
+			<div class="upper-menu">
+		<a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart"> </a>
       <form action="#" method="get"  class="search">
-        <a href="#" name="search" class="glass"><img src="img/icon-search.png" class="glass-pic"></a>
+        <a href="#" name="search" class="glass"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" class="glass-icon"><path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg></a>
         <input type="text" class="find-text" name="search" placeholder="Поиск:">
       </form>
-      <a href="#" class="main-action book"><img src="img/icon-bookmark.png" class="bookmark-pic">Закладки: 0</a> <a href="#" class="main-action cart-catalog"><img src="img/cart-icon.png" class="cart-pic">Корзина: 10</a> <a href="#" class="main-action order">Оформить заказ</a> </nav>
+      <a href="#" class="main-action book"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" class="bookmark-pic"><path d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z"/></svg>Закладки: 0</a> <a href="#" class="main-action cart-catalog"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat"><circle cx="4.5" cy="13.5" r="1.5"/><circle cx="12.5" cy="13.5" r="1.5"/><path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/></svg>Корзина: 10</a> <a href="#" class="main-action order">Оформить заказ</a>
+				</div>
+			</div>
+	  </nav>
     <section class="main-info">
+		<div class="main-width">
       <div class="second-menu">
         <h2 class="main-describe">Интернет-магазин<br>
           строительных материалов<br>
           и инструментов для ремонта </h2>
-        <div class="call-adress-cat"> <a href="tel:+78125550555" class="tel"><img src="img/icon-phone.png" class="telefon">+7 (812) 555-05-55 </a>
+        <div class="call-adress-cat"> <a href="tel:+78125550555" class="tel"><svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" class="telefon"><path d="M15.572 18.985h-.941c-4.129-.488-7.157-2.408-9.359-4.864C3.062 11.66 1.318 8.492.978 4.228V3.084c.078-.774.459-1.304.898-1.757C2.425.766 3.25.044 4.002.019c.554-.018 1.5.38 1.879.899.329.446.504 1.339.656 2.003.154.671.505 1.643.408 2.289-.148 1.007-1.487 1.434-1.879 2.166 1.307 3.135 3.443 5.439 6.293 7.031.715-.392 1.346-1.572 2.332-1.595.359-.009.818.178 1.184.286.402.121.75.275 1.104.408.596.224 1.648.521 2.004 1.021.365.513.57 1.356.49 1.879-.164 1.041-1.879 2.197-2.901 2.579z"/></svg>+7 (812) 555-05-55 </a>
           <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
         </div>
         <div class="user-info">
-          <div class="prof-but"> <a href="#" class="profile"><img src="img/icon-user.png" class="profile-icon">Равшан Джамшутович</a>
-            <div class="prof-logout"> <a href="#" name="exit"><img src="img/icon-logout копия.png"></a> </div>
+          <div class="prof-but"> <a href="#" class="profile">
+			  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" class="profile-icon"><path d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"/></svg>Равшан Джамшутович</a>
+            <div class="prof-logout"> <a href="#" name="exit"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="17" class="logout-icon"><g ><path d="M21 8.5L12.125 0v6h-6v5h6v6z"/><path d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"/></g></svg></a> </div>
           </div>
           <div class="orders-cab"> <a href="#">Мои заказы</a>
             <div class="dot"></div>
@@ -34,10 +42,11 @@
         </div>
       </div>
       <nav class="main-menu"> <a href="index.html">Главная</a> <a href="#">Компания</a> <a href="catalog.html">Каталог</a> <a href="#">Новости</a> <a href="#">Спецпредложения</a> <a href="#">Доставка</a> <a href="#">Контакты</a> </nav>
+			</div>
     </section>
   </header>
-	<div class="main-width">
   <main>
+	  <div class="main-width">
     <div class="navigation"> <a href="index.html"><img src="img/icon-home.svg"></a> <img src="img/icon-right-small.svg"> <a href="catalog.html">Каталог</a> <img src="img/icon-right-small.svg"> <a href="#">Инструмент</a> <img src="img/icon-right-small.svg"> <a href="#">Перфораторы</a> </div>
     <section class="sub-menu">
       <div class="perf">
@@ -46,45 +55,59 @@
       <div class="goods-flex-cat">
         <div class="make-a-choise">
           <form action="#" method="get" class="form-pad">
-			  <h4>Производители:</h4>
+			  <h4 class="form-describe">Производители:</h4>
             <ul>
               <li>
-                <label>
-                  <input type="checkbox" name="Bosh" class="checkbox-cast">
-                  Bosh</label>
+                <label class="circle">
+                  <input type="checkbox" name="Bosh" class="visually-hidden">
+                  Bosh
+				  <span class="checkbox-indicator"></span>
+				  </label>
               </li>
               <li>
-                <label>
-                  <input type="checkbox" name="Interskol" class="checkbox-cast">
-                  Интерскол </label>
+                <label class="circle">
+                  <input type="checkbox" name="Interskol" class="visually-hidden">
+                  Интерскол 
+				  <span class="checkbox-indicator"></span>
+				  </label>
               </li>
               <li>
-                <label>
-                  <input type="checkbox" name="Makita" class="checkbox-cast">
-                  Makita </label>
+                <label class="circle">
+                  <input type="checkbox" name="Makita" class="visually-hidden">
+                  Makita 
+				  <span class="checkbox-indicator"></span>
+				  </label>
               </li>
               <li>
-                <label>
-                  <input type="checkbox" name="Dewalt" class="checkbox-cast">
-                  Dewalt </label>
+                <label class="circle">
+                  <input type="checkbox" name="Dewalt" class="visually-hidden">
+                  Dewalt 
+				  <span class="checkbox-indicator"></span>
+				  </label>
               </li>
               <li>
-                <label>
-                  <input type="checkbox" name="Hitachi" class="checkbox-cast">
-                  Hitachi </label>
+                <label class="circle">
+                  <input type="checkbox" name="Hitachi" class="visually-hidden">
+                  Hitachi 
+				  <span class="checkbox-indicator"></span>
+				  </label>
               </li>
             </ul>
-            <h4>Питание:</h4>
+            <h4 class="form-describe">Питание:</h4>
             <ul>
               <li>
-                <label>
-                  <input type="radio" name="supply" value="battery" class="radio-cast">
-                  Аккумуляторные </label>
+                <label class="radio-bat">
+                  <input type="radio" name="supply" value="battery" class="visually-hidden" >
+                  Аккумуляторные 
+				  <span class="radio-indicator"></span>
+				  </label>
               </li>
               <li>
-                <label>
-                  <input type="radio" name="supply" value="network" class="radio-cast">
-                  Сетевые </label>
+                <label  class="radio-bat">
+                  <input type="radio" name="supply" value="network" class="visually-hidden">
+                  Сетевые 
+				  <span class="radio-indicator"></span>
+				  </label>
               </li>
             </ul>
             <button class="show">Показать</button>
@@ -109,7 +132,7 @@
             <li class="item-flex">
 				<img src="img/new flag.png" class="flag">
 				<div class="descrip-item">
-				<a href="#" class="buy"><img src="img/cart-icon.png" class="cart-cat">Купить</a>
+				<a href="#" class="buy"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr" fill=""><circle cx="4.5" cy="13.5" r="1.5"/><circle cx="12.5" cy="13.5" r="1.5"/><path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/></svg>Купить</a>
 				<a href="#" class="bookmarks">В закладки</a>
               <p class="product-name">Перфоратор Bosh BFG 2000</p>
               <p class="new-value-rows">12500 Р.</p>
@@ -163,10 +186,11 @@
         </div>
       </div>
     </section>
-  </main>
-	</div>	
+		 </div> 
+  </main>	
   <footer>
     <section class="down-menu">
+		<div class="main-width">
       <div class="tech-upper"> <a href="index.html" class="down-logo"><img src="img/technomart.svg" class="down-technomart"> </a>
         <div class="menu-pages"> <a href="#">Компания</a> <a href="#">Новости</a> <a href="catalog.html">Каталог</a> <a href="#">Доставка</a> <a href="#">Контакты</a> </div>
       </div>
@@ -177,8 +201,10 @@
         </div>
         <div class="menu-pages-mat"> <a href="#">Материалы</a> <a href="#">Техника</a> <a href="#">Инструмент</a> <a href="#">Спецпредложения</a> </div>
       </div>
+			</div>
     </section>
     <section class="links">
+		<div class="main-width">
       <div class="down-info">
         <div class="sign">
           <p>2010-2017 Компания "Техномарт"<br>
@@ -202,6 +228,7 @@
           </table>
         </div>
       </div>
+			</div>
     </section>
   </footer>
   <div class="visually-hidden">
