--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>HTML Academy: Техномарт</title>
-<link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i|PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i%7CPT+Sans:400,400i,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
 <link href="css/normalize.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 </head>
@@ -13,9 +13,9 @@
     <nav class="color-nav"> 
 		<div class="main-width">
 			<div class="upper-menu">
-		<a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart" alt="technomart logo"> </a>
+		<a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart" alt="technomart logo" width="108" height="18"> </a>
       <form action="#" method="get"  class="search">
-        <a href="#" name="search" class="glass"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" class="glass-icon"><path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg></a>
+        <a href="#" class="glass"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" class="glass-icon"><path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg></a>
         <input type="text" class="find-text" name="search" placeholder="Поиск:">
       </form>
       <a href="#" class="main-action book"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" class="bookmark-pic"><path d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z"/></svg>Закладки: 0</a> <a href="#" class="main-action cart-catalog"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat"><circle cx="4.5" cy="13.5" r="1.5"/><circle cx="12.5" cy="13.5" r="1.5"/><path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/></svg>Корзина: 10</a> <a href="#" class="main-action order">Оформить заказ</a>
@@ -34,7 +34,7 @@
         <div class="user-info">
           <div class="prof-but"> <a href="#" class="profile">
 			  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" class="profile-icon"><path d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"/></svg>Равшан Джамшутович</a>
-            <div class="prof-logout"> <a href="#" name="exit"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="17" class="logout-icon"><g ><path d="M21 8.5L12.125 0v6h-6v5h6v6z"/><path d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"/></g></svg></a> </div>
+            <div class="prof-logout"> <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="17" class="logout-icon"><g ><path d="M21 8.5L12.125 0v6h-6v5h6v6z"/><path d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"/></g></svg></a> </div>
           </div>
           <div class="orders-cab"> <a href="#">Мои заказы</a>
             <div class="dot"></div>
@@ -47,7 +47,7 @@
   </header>
   <main>
 	  <div class="main-width">
-    <div class="navigation"> <a href="index.html"><img src="img/icon-home.svg" alt="house logo"></a> <img src="img/icon-right-small.svg" alt="arrow logo"> <a href="catalog.html">Каталог</a> <img src="img/icon-right-small.svg" alt="arrow logo"> <a href="#">Инструмент</a> <img src="img/icon-right-small.svg" alt="arrow logo"> <a href="#">Перфораторы</a> </div>
+    <div class="navigation"> <a href="index.html"><img src="img/icon-home.svg" alt="house logo" width="14" height="12"></a> <img src="img/icon-right-small.svg" alt="arrow logo" width="8" height="12"> <a href="catalog.html">Каталог</a> <img src="img/icon-right-small.svg" alt="arrow logo" width="8" height="12"> <a href="#">Инструмент</a> <img src="img/icon-right-small.svg" alt="arrow logo" width="8" height="12"> <a href="#">Перфораторы</a> </div>
     <section class="sub-menu">
       <div class="perf">
         <h3>Перфораторы</h3>
@@ -115,14 +115,14 @@
         </div>
         <div class="list-of-goods">
           <ul class="items">
-            <li class="item-flex"><img src="img/Perforator_1.jpg" alt="perforator Bosh BFG 3000 logo">
+            <li class="item-flex"><img src="img/Perforator_1.jpg" alt="perforator Bosh BFG 3000 logo" width="218" height="170">
               <div class="descrip-item">
                 <p class="product-name">Перфоратор Bosh BFG 3000</p>
                 <p class="old-value">22500 Р.</p>
                 <p class="new-value">15500 Р.</p>
               </div>
             </li>
-            <li class="item-flex"><img src="img/Perforator_2.jpg" alt="perforator Bosh BFG 6000">
+            <li class="item-flex"><img src="img/Perforator_2.jpg" alt="perforator Bosh BFG 6000" width="218" height="170">
 				<div class="descrip-item">
               <p class="product-name">Перфоратор Bosh BFG 6000</p>
               <p class="old-value">30500 Р.</p>
@@ -130,7 +130,7 @@
 					</div>
             </li>
             <li class="item-flex">
-				<img src="img/new flag.png" class="flag" alt="flag logo">
+				<img src="img/newflag.png" class="flag" alt="flag logo" width="60" height="60">
 				<div class="descrip-item">
 				<a href="#" class="buy"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr" fill=""><circle cx="4.5" cy="13.5" r="1.5"/><circle cx="12.5" cy="13.5" r="1.5"/><path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/></svg>Купить</a>
 				<a href="#" class="bookmarks">В закладки</a>
@@ -138,7 +138,7 @@
               <p class="new-value-rows">12500 Р.</p>
 					</div>
             </li>
-            <li class="item-flex"><img src="img/Perforator_1.jpg" alt="perforator Bosh BFG 3000 logo">
+            <li class="item-flex"><img src="img/Perforator_1.jpg" alt="perforator Bosh BFG 3000 logo" width="218" height="170">
 				<div class="descrip-item">
               <p class="product-name">Перфоратор Bosh BFG 3000</p>
               <p class="old-value">22500 Р.</p>
@@ -146,37 +146,37 @@
 					</div>
             </li>
             <li class="item-flex">
-				<img src="img/new flag.png" class="flag" alt="flag logo">
-				<img src="img/Perforator_2.jpg" alt="perforator Bosh BFG 6000">
+				<img src="img/newflag.png" class="flag" alt="flag logo" width="60" height="60">
+				<img src="img/Perforator_2.jpg" alt="perforator Bosh BFG 6000" width="218" height="170">
 				<div class="descrip-item">
               <p class="product-name">Перфоратор Bosh BFG 6000</p>
               <p class="old-value">30500 Р.</p>
               <p class="new-value">25500 Р.</p>
 					</div>
             </li>
-            <li class="item-flex"><img src="img/Perforator_3.jpg" alt="perforator Bosh BFG 2000">
+            <li class="item-flex"><img src="img/Perforator_3.jpg" alt="perforator Bosh BFG 2000" width="218" height="170">
 				<div class="descrip-item">
               <p class="product-name">Перфоратор Bosh BFG 2000</p>
               <p class="new-value-rows">12500 Р.</p>
 					</div>
             </li>
             <li class="item-flex">
-				<img src="img/new flag.png" class="flag" alt="flag logo">
-				<img src="img/Perforator_1.jpg" alt="perforator Bosh BFG 3000 logo">
+				<img src="img/newflag.png" class="flag" alt="flag logo" width="60" height="60">
+				<img src="img/Perforator_1.jpg" alt="perforator Bosh BFG 3000 logo" width="218" height="170">
 				<div class="descrip-item">
               <p class="product-name">Перфоратор Bosh BFG 3000</p>
               <p class="old-value">22500 Р.</p>
               <p class="new-value">15500 Р.</p>
 					</div>
             </li>
-            <li class="item-flex"><img src="img/Perforator_2.jpg" alt="perforator Bosh BFG 6000">
+            <li class="item-flex"><img src="img/Perforator_2.jpg" alt="perforator Bosh BFG 6000" width="218" height="170">
 				<div class="descrip-item">
               <p class="product-name">Перфоратор Bosh BFG 6000</p>
               <p class="old-value">30500 Р.</p>
               <p class="new-value">25500 Р.</p>
 					</div>
             </li>
-            <li class="item-flex"><img src="img/Perforator_3.jpg" alt="perforator Bosh BFG 2000">
+            <li class="item-flex"><img src="img/Perforator_3.jpg" alt="perforator Bosh BFG 2000" width="218" height="170">
 				<div class="descrip-item">
               <p class="product-name">Перфоратор Bosh BFG 2000</p>
               <p class="new-value-rows">12500 Р.</p>
@@ -191,7 +191,7 @@
   <footer>
     <section class="down-menu">
 		<div class="main-width">
-      <div class="tech-upper"> <a href="index.html" class="down-logo"><img src="img/technomart.svg" class="down-technomart" alt="technomart logo"> </a>
+      <div class="tech-upper"> <a href="index.html" class="down-logo"><img src="img/technomart.svg" class="down-technomart" alt="technomart logo" width="136" height="21"> </a>
         <div class="menu-pages"> <a href="#">Компания</a> <a href="#">Новости</a> <a href="catalog.html">Каталог</a> <a href="#">Доставка</a> <a href="#">Контакты</a> </div>
       </div>
       <div class="tech-down">
@@ -211,9 +211,9 @@
             Все права защищены</p>
         </div>
         <div class="social-networks">
-          <div class="ic-background"> <a href="www.vk.com"><img src="img/vk-icon-min.png" class="sn-pic" alt="vkontakte logo"></a> </div>
-          <div class="ic-background"> <a href="www.facebook.com"><img src="img/fb-icon-min.png" class="sn-pic" alt="facebook logo"></a> </div>
-          <div class="ic-background"> <a href="www.instagram.com"><img src="img/insta-icon-min.png" class="sn-pic" alt="instagram logo"></a> </div>
+          <div class="ic-background"> <a href="www.vk.com"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" class="sn-pic"><path d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/></svg></a> </div>
+          <div class="ic-background"> <a href="www.facebook.com"><svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" class="sn-pic"><path d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg></a> </div>
+          <div class="ic-background"> <a href="www.instagram.com"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" class="sn-pic"><path d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg></a> </div>
         </div>
         <div class="cont-table">
           <table>
@@ -234,7 +234,7 @@
   <div class="visually-hidden">
     <p>Товар добавлен в корзину!</p>
     <a href="#">Оформить заказ</a> <a href="#">Продолжить покупки</a>
-    <button name="exit" style="#"></button>
+    <button name="exit"></button>
   </div>
 </body>
 </html>
